updated scroll effect

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   /* background-image: url(../src/assets/beach.jpg); */
   background-size: cover;
   background-position: top;
-  position: relative;
+  /* position: relative; */
 }
 
 .heading-primary {
